mobile view for: search, reports & studies, report -details, events-details-video, events-details-audio

--- a/events-details-audio.html
+++ b/events-details-audio.html
@@ -370,6 +370,8 @@
             </div>
         </header>
         <main>
+
+            <!-- change 1 -->
             <section class="bg-white pad-header-height">
                 <div class="container block-inner-container">
                     <div class="article-hero">
@@ -389,14 +391,14 @@
                         ></iframe>
                         <div class="article-hero__metadata">
                             <div class="meta d-flex align-items-center gap-4">
-                                <p>Jordan</p>
-                                <p>2:30 - 6:30</p>
+                                <span>Jordan</span>
+                                <span>2:30 - 6:30</span>
                             </div>
                             <div class="date">28/8/2023</div>
                         </div>
                     </div>
                     <div class="row position-relative">
-                        <div class="col-6 article-content">
+                        <div class="col-12 col-md-6 article-content">
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Proin bibendum nunc sit amet
@@ -447,7 +449,7 @@
                                 hendrerit turpis. Integer nec mau.
                             </p>
                         </div>
-                        <div class="offset-2 col-4">
+                        <div class="col-12 mt-5 mt-md-0 offset-md-2 col-md-4">
                             <div class="sticky-card h-auto">
                                 <label
                                     for="email-newsletter-input"
@@ -481,7 +483,7 @@
             <section>
                 <div class="container block-section">
                     <h2 class="section-title">
-                        <a href="#"> Related Content </a>
+                        <a href="#"> Related Issues </a>
                         <a href="#" class="meta">View More</a>
                     </h2>
                     <div class="carousel-container">
@@ -489,8 +491,13 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="row">
-                                        <div class="col-4">
-                                            <a href="#" class="card">
+                                        <div
+                                            class="col-12 mb-3 mb-md-0 col-md-4"
+                                        >
+                                            <a
+                                                href="#"
+                                                class="card mobile-horizontal-card"
+                                            >
                                                 <div class="card__media">
                                                     <div class="img img-6_9">
                                                         <img
@@ -537,8 +544,13 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div class="col-4">
-                                            <a href="#" class="card">
+                                        <div
+                                            class="col-12 mb-3 mb-md-0 col-md-4"
+                                        >
+                                            <a
+                                                href="#"
+                                                class="card mobile-horizontal-card"
+                                            >
                                                 <div class="card__media">
                                                     <div class="img img-6_9">
                                                         <img
@@ -585,8 +597,13 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div class="col-4">
-                                            <a href="#" class="card">
+                                        <div
+                                            class="col-12 mb-3 mb-md-0 col-md-4"
+                                        >
+                                            <a
+                                                href="#"
+                                                class="card mobile-horizontal-card"
+                                            >
                                                 <div class="card__media">
                                                     <div class="img img-6_9">
                                                         <img
@@ -637,8 +654,13 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="row">
-                                        <div class="col-4">
-                                            <a href="#" class="card">
+                                        <div
+                                            class="col-12 mb-3 mb-md-0 col-md-4"
+                                        >
+                                            <a
+                                                href="#"
+                                                class="card mobile-horizontal-card"
+                                            >
                                                 <div class="card__media">
                                                     <div class="img img-6_9">
                                                         <img
@@ -685,8 +707,13 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div class="col-4">
-                                            <a href="#" class="card">
+                                        <div
+                                            class="col-12 mb-3 mb-md-0 col-md-4"
+                                        >
+                                            <a
+                                                href="#"
+                                                class="card mobile-horizontal-card"
+                                            >
                                                 <div class="card__media">
                                                     <div class="img img-6_9">
                                                         <img
@@ -733,8 +760,13 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div class="col-4">
-                                            <a href="#" class="card">
+                                        <div
+                                            class="col-12 mb-3 mb-md-0 col-md-4"
+                                        >
+                                            <a
+                                                href="#"
+                                                class="card mobile-horizontal-card"
+                                            >
                                                 <div class="card__media">
                                                     <div class="img img-6_9">
                                                         <img
@@ -830,11 +862,14 @@
             </section>
         </main>
 
+        
         <footer>
             <div class="footer-section">
                 <div class="container">
                     <div class="row">
-                        <div class="col-4 email-collector social-reach">
+                        <div
+                            class="col-12 mb-5 mb-md-0 col-md-4 email-collector social-reach"
+                        >
                             <h3 class="card-title mb-3">
                                 Subscribe to our email newsletter
                             </h3>
@@ -853,7 +888,7 @@
                                 <button type="button">Subscribe →</button>
                             </div>
                         </div>
-                        <div class="col-4 offset-4 social-follow">
+                        <div class="col-12 col-md-4 offset-md-4 social-follow">
                             <h3 class="card-title">
                                 Follow us on social media
                             </h3>
